# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.21 2006/07/09 20:34:13 phreak Exp $

*git-sources-2.6.18_rc1-r2 (09 Jul 2006)

  09 Jul 2006; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.18_rc1-r2.ebuild:
  Version bump

*git-sources-2.6.17-r13 (28 Jun 2006)

  28 Jun 2006; Robin H. Johnson <robbat2@gentoo.org>
  +git-sources-2.6.17-r13.ebuild:
  Version bump.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

*git-sources-2.6.16-r11 (26 Mar 2006)

  26 Mar 2006; Robin H. Johnson <robbat2@gentoo.org>
  +git-sources-2.6.16-r11.ebuild:
  Version bump, slightly ebuild tweak to work for it.

*git-sources-2.6.16_rc5-r15 (11 Mar 2006)

  11 Mar 2006; Robin H. Johnson <robbat2@gentoo.org>
  +git-sources-2.6.16_rc5-r15.ebuild:
  Version bump.

*git-sources-2.6.16_rc5-r14 (10 Mar 2006)

  10 Mar 2006; Robin H. Johnson <robbat2@gentoo.org>
  +git-sources-2.6.16_rc5-r14.ebuild:
  Version bump.

*git-sources-2.6.16_rc5-r10 (08 Mar 2006)

  08 Mar 2006; Robin H. Johnson <robbat2@gentoo.org>
  -git-sources-2.6.15-r1.ebuild, -git-sources-2.6.15-r5.ebuild,
  -git-sources-2.6.15-r6.ebuild, -git-sources-2.6.15-r7.ebuild,
  -git-sources-2.6.15-r8.ebuild, -git-sources-2.6.15-r11.ebuild,
  -git-sources-2.6.15-r12.ebuild, -git-sources-2.6.16_rc1-r1.ebuild,
  -git-sources-2.6.16_rc1-r2.ebuild, -git-sources-2.6.16_rc1-r3.ebuild,
  -git-sources-2.6.16_rc1-r4.ebuild, -git-sources-2.6.16_rc1-r5.ebuild,
  -git-sources-2.6.16_rc2-r1.ebuild, +git-sources-2.6.16_rc5-r10.ebuild:
  This git-sources ebuild now actually applies the git patches, while a lot of
  previous ebuilds missed the -git patch and only applied the -rc patch
  (changes are made both to this ebuild and kernel-2.eclass). In conjuction
  with this, the old broken ebuilds have been removed.

*git-sources-2.6.16_rc2-r1 (04 Feb 2006)