@@ -1,0 +1,9 @@
+MD5 37ddefe96625502161f075b9d907f21e linux-2.6.17.tar.bz2 41272919
+RMD160 26aad30c9a6610665c6c7d62401d79bf56a6a699 linux-2.6.17.tar.bz2 41272919
+SHA256 ab0f647d52f124958439517df9e1ae0efda90cdb851f59f522fa1749f1d87d58 linux-2.6.17.tar.bz2 41272919
+MD5 9033f9941b667f3e06d99ee1975a2ed7 patch-2.6.18-rc1-git9.bz2 388052
+RMD160 53daaa0ab373e4f39dfa2812a33992b91b69628b patch-2.6.18-rc1-git9.bz2 388052
+SHA256 783edd55fe2dce02ea9349e8d2e103f7a3581f2b3c493a568d9551f13ee6e0c5 patch-2.6.18-rc1-git9.bz2 388052
+MD5 05b9b6632d6e02fa4eee1e011591b0d9 patch-2.6.18-rc1.bz2 424542
+RMD160 1c4386b5e2a2acb1d26eec1d0412e06573a60cc1 patch-2.6.18-rc1.bz2 424542
+SHA256 43d13d3eeb9c7b5c2adeaf48f7a3a17906195da44dea88394a35a1acc912a47b patch-2.6.18-rc1.bz2 424542
